test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-no-existing-update-trigger-no-precondition/03-trigger.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-data-sync-no-existing-update-trigger-no-precondition-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: cpol-data-sync-no-existing-update-trigger-no-precondition-ns
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: test
      app.kubernetes.io/name: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: test
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
