test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-no-existing-update-trigger-no-precondition/02-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-no-existing-update-trigger-no-precondition
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
